--- a/src/features/Landing/navBarDesktop/ui.scss
+++ b/src/features/Landing/navBarDesktop/ui.scss
@@ -1,18 +1,20 @@
-$navBarHeight: 96px;
+$navBarHeight: 80px;
 $scrollColor: rgba(53, 121, 248, 0.6);
 $scrollBlur: 32px;
 $accent-color-blur: rgb(53, 121, 248);
 
 .wrap {
   font-family: "SF_SemiBold", Arial, Helvetica, sans-serif;
-  justify-content: space-between;
   width: 100vw;
   height: $navBarHeight;
   position: fixed;
+  display: flex;
+  align-items: center;
   z-index: 2000;
 }
 
 .container {
+  height: 100%;
   width: 100vw;
   display: flex;
   justify-content: space-between;
