--- a/src/shared/Landing/cover/ui.module.scss
+++ b/src/shared/Landing/cover/ui.module.scss
@@ -5,7 +5,14 @@ $white-text-color: #fff;
 .externalLayout {
   display: flex;
   justify-content: center;
-
+  .decor {
+    position: absolute;
+    right: 0;
+    top: 3.5%;
+    width: 580px;
+    height: 580px;
+    z-index: 12;
+  }
   .cover {
     width: 100%;
     height: 100%;
@@ -66,6 +73,9 @@ $white-text-color: #fff;
 
 @media screen and (max-width: 1440px) {
   .externalLayout {
+    .decor {
+      display: none;
+    }
     .cover {
       .innerLayout {
         .column {
