--- a/src/widgets/Materials/ui/ui.module.scss
+++ b/src/widgets/Materials/ui/ui.module.scss
@@ -4,7 +4,6 @@
   gap: 24px;
   overflow: hidden;
   flex-wrap: wrap;
-  height: 326px;
   justify-content: center;
   width: 90vw;
   align-items: center;
@@ -78,7 +77,6 @@
   .wrapMaterials {
     width: 100vw;
     gap: 12px;
-    height: 200px;
   }
   .titleWrap {
     & * {
